--- a/Visualgo/Visualgo.vcxproj.filters
+++ b/Visualgo/Visualgo.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Arrow.cpp">
       <Filter>Source Files\GUI</Filter>
     </ClCompile>
+    <ClCompile Include="TextBox.cpp">
+      <Filter>Source Files\GUI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DoublyLinkedList.h">
@@ -66,6 +69,9 @@
       <Filter>Source Files\GUI</Filter>
     </ClInclude>
     <ClInclude Include="Arrow.h">
+      <Filter>Source Files\GUI</Filter>
+    </ClInclude>
+    <ClInclude Include="TextBox.h">
       <Filter>Source Files\GUI</Filter>
     </ClInclude>
   </ItemGroup>
