--- a/Visualgo/Visualgo.vcxproj
+++ b/Visualgo/Visualgo.vcxproj
@@ -143,6 +143,7 @@
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="DoublyLinkedList.cpp" />
     <ClCompile Include="Circle.cpp" />
+    <ClCompile Include="Menu.cpp" />
     <ClCompile Include="Queue.cpp" />
     <ClCompile Include="Stack.cpp" />
     <ClCompile Include="StaticArray.cpp" />
@@ -154,6 +155,7 @@
     <ClInclude Include="Button.h" />
     <ClInclude Include="DoublyLinkedList.h" />
     <ClInclude Include="Circle.h" />
+    <ClInclude Include="Menu.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Stack.h" />
     <ClInclude Include="StaticArray.h" />
