--- a/Visualgo/Visualgo.vcxproj.filters
+++ b/Visualgo/Visualgo.vcxproj.filters
@@ -69,49 +69,55 @@
     <ClCompile Include="MenuStack.cpp">
       <Filter>Source Files\Scene</Filter>
     </ClCompile>
+    <ClCompile Include="MenuSLL.cpp">
+      <Filter>Source Files\Scene</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DoublyLinkedList.h">
-      <Filter>Source Files\Data Structure</Filter>
-    </ClInclude>
-    <ClInclude Include="Stack.h">
-      <Filter>Source Files\Data Structure</Filter>
-    </ClInclude>
-    <ClInclude Include="Queue.h">
-      <Filter>Source Files\Data Structure</Filter>
-    </ClInclude>
-    <ClInclude Include="StaticArray.h">
-      <Filter>Source Files\Data Structure</Filter>
-    </ClInclude>
-    <ClInclude Include="Button.h">
-      <Filter>Source Files\GUI</Filter>
-    </ClInclude>
-    <ClInclude Include="Circle.h">
-      <Filter>Source Files\GUI</Filter>
-    </ClInclude>
-    <ClInclude Include="Arrow.h">
-      <Filter>Source Files\GUI</Filter>
-    </ClInclude>
-    <ClInclude Include="TextBox.h">
-      <Filter>Source Files\GUI</Filter>
-    </ClInclude>
     <ClInclude Include="Menu.h">
-      <Filter>Source Files\Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="Buttons.h">
-      <Filter>Source Files\GUI</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MenuDLL.h">
-      <Filter>Source Files\Scene</Filter>
-    </ClInclude>
-    <ClInclude Include="MenuStaticArray.h">
-      <Filter>Source Files\Scene</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MenuQueue.h">
-      <Filter>Source Files\Scene</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MenuStack.h">
-      <Filter>Source Files\Scene</Filter>
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MenuStaticArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TextBox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Circle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Buttons.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Button.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Arrow.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StaticArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Stack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Queue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DoublyLinkedList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MenuSLL.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
